kubernetes/service.yaml
apiVersion: v1
kind: Service
namespace: default
metadata:
  name: ecsdemo-nodejs
spec:
  selector:
    app: ecsdemo-nodejs
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 3000
