kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nodejs
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /nodejs
            backend:
              serviceName: ecsdemo-nodejs
              servicePort: 80
